finished auth, added token_required decorator
